--- a/src/components/layouts/layout.css
+++ b/src/components/layouts/layout.css
@@ -11,7 +11,7 @@
     top: 50%;
     right: 60px;
     transform: translateY(-50%);
-    background-color: #ffffff;
+    background-color: #bffdfd9a;
     color: #000000;
     padding: 5px 10px;
     border-radius: 4px;
