DashBoard has been Done Till this commit auto Login Timesheet Matter Expense Has Working And Added Charts Also For Billable non Billable In Timesheet and Apart from that MyProfile Page Has Been More User-friendly and Chaned the Tabs Layout UI Also And login page also had some changes in UI commit done By :-himanshu

--- a/src/components/layouts/layout.css
+++ b/src/components/layouts/layout.css
@@ -25,6 +25,7 @@
     display: block; /* Show on hover */
   }
   
+  
   /* Adjust the hover effect for touch devices */
   @media (hover: none) {
     .fab-button::after {
@@ -32,3 +33,19 @@
     }
   }
   
+
+
+/* FabMenu.css */
+
+.fab-menu-container {
+  position: relative;
+}
+
+
+
+.menu-open ion-app, .menu-open ion-content, .menu-open ion-header {
+  filter: blur(10px); /* Apply blur to entire app content */
+}
+
+
+
