--- a/src/pages/expense/viewExpense.css
+++ b/src/pages/expense/viewExpense.css
@@ -1,7 +1,7 @@
-.light-green {
-    color: rgb(32, 252, 43) !important; 
-  }
 
+.boldAmount{
+  font-weight: bold;
+}
  
   .small-font {
     font-size: 0.9em;
