Added Tag other Approve And Bugs Fixed

--- a/src/pages/expense/expenseForm.css
+++ b/src/pages/expense/expenseForm.css
@@ -1,4 +1,4 @@
-.centered-button-container {
+/* .centered-button-container {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -55,4 +55,4 @@
     color: lightgreen; 
   }
   
-  
+   */
