--- a/src/pages/timesheet/ViewTimesEntry.css
+++ b/src/pages/timesheet/ViewTimesEntry.css
@@ -1,5 +1,5 @@
 /* ViewTimesheet.css */
-.modal-style {
+/* .modal-style {
 
     position: fixed;
     bottom: 0;
@@ -10,4 +10,4 @@
   .custom-toolbar {
     background-color: #3dc2ff;
     color: white;
-  }
+  } */
