--- a/src/components/style.css
+++ b/src/components/style.css
@@ -105,6 +105,7 @@
   margin-right: 8px; /* Space between icon and title */
 
   color: #3dc2ff;
+
 }
 
 .billable-hours, .nonbillable-hours, .exp-reimbursed {
@@ -124,3 +125,255 @@
 
 .Ionic-header{padding: 0px!important;}
 .Card-content{padding: 10px 15px; margin-top: 10px;}
+
+.validation-message {
+  color: red;
+  font-size: 0.rem;
+  text-align: center;
+  margin-top: 10px;
+}
+
+
+.profile-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.profile-header {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-bottom: 20px;
+}
+
+.profile-avatar {
+  width: 100px;
+  height: 100px;
+  margin-top: 5vh;
+  margin-bottom: 10px;
+  border-radius: 50%;
+  overflow: hidden;
+  border: 1px solid#3dc2ff; 
+}
+
+
+
+.profile-details {
+  width: 100%;
+}
+
+
+.listHeader{
+  font-weight: bolder;
+  text-align: center;
+  padding: 10px;
+}
+.logout-button {
+  width: 100%;
+  margin-top: 20px;
+}
+.modal-content {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  width: 250px;
+  height: 250px;
+  border-radius: 20%;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  text-align: center;
+}
+
+
+
+
+.modal-close-button {
+  margin-top: auto;
+}
+
+.modal-style {
+
+  position: fixed;
+  bottom: 0;
+  width: 100%;
+  overflow: hidden;
+ 
+}
+.custom-toolbar {
+  background-color: #3dc2ff;
+  color: white;
+}
+
+
+/* ForgotPassword.css */
+
+.loginlogo {
+  text-align: center;
+  margin-top: 25px;
+}
+
+.loginlogo img {
+  width: 100px;
+}
+
+.inputsList {
+  margin-top: 20px;
+}
+
+.texts {
+  margin-bottom: 10px;
+}
+
+.reset-pwd-text {
+  font-size: 15px;
+  text-align: center;
+  width: 100%;
+  display: block;
+  color: #ccc;
+  margin-top: 60px;
+}
+
+.input-with-icon {
+  display: flex;
+  align-items: center;
+  width: 90%; /* Adjust width as needed */
+}
+
+.sample-pwd-field-class{
+  padding: 10px;
+  margin-top: 25px;
+}
+
+/* login.css */
+.login-content {
+  --background: transparent;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100%;
+  background-image: url('https://legalxgen.blob.core.windows.net/customerlogos/lxdoca2e78860a63e442592246686d2c84789.jpeg');
+  background-size: cover;
+  background-position: center;
+}
+
+.login-background {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 100%;
+}
+
+.login-card {
+  width: 100%;
+  max-width: 500px;
+  background: rgba(254, 255, 255, 0.90);
+  border-radius: 10px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  padding: 20px;
+}
+
+.login-logo-container {
+  display: flex;
+  justify-content: center;
+  margin-bottom: 20px;
+}
+
+.login-logo {
+  width: 150px;
+}
+
+.texts {
+  margin-bottom: 10px;
+}
+
+.transparent-bg-btn {
+  background: transparent;
+  box-shadow: none;
+}
+
+.transparent-bg-btn .blu-icon {
+  color: #3880ff;
+}
+
+.login-links {
+  display: flex;
+
+ justify-content: center;
+ align-items: center;
+ text-align: center;
+}
+
+.centered-button-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 20px;
+  margin-bottom: 20px;
+
+}
+
+
+
+.photos-container {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  margin-top: 20px;
+}
+
+.photo-item {
+  position: relative;
+  margin: 10px;
+}
+
+.photo-item img {
+  width: 60px;
+  height: 60px;
+  object-fit: cover;
+  border-radius: 5px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+}
+
+.remove-button {
+  position: absolute;
+  top: -5px;
+  right: -5px;
+  width: 24px;
+  height: 24px;
+  border-radius: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: rgba(255, 0, 0, 0.8);
+  color: white;
+  font-size: 16px;
+  cursor: pointer;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
+  transition: background-color 0.3s ease;
+}
+
+.remove-button:hover {
+  background-color: rgba(255, 0, 0, 1);
+}
+
+.light-green {
+  color: lightgreen; 
+}
+
+
+.boldAmount{
+  font-weight: bold;
+}
+ 
+  .small-font {
+    font-size: 0.9em;
+  }
+  .icn-pad-right {
+    margin-right: 8px;
+  }
+  
