--- a/src/pages/login/forgotPassword.css
+++ b/src/pages/login/forgotPassword.css
@@ -1,15 +1,15 @@
-/* ForgotPassword.css */
+/* 
 
 .loginlogo {
     text-align: center;
-    margin-top: 20px;
+    margin-top: 25px;
   }
   
   .loginlogo img {
-    width: 150px;
+    width: 100px;
   }
   
-  .inputarea {
+  .inputsList {
     margin-top: 20px;
   }
   
@@ -18,18 +18,21 @@
   }
   
   .reset-pwd-text {
-    font-size: 16px;
+    font-size: 15px;
     text-align: center;
     width: 100%;
     display: block;
+    color: #ccc;
+    margin-top: 60px;
   }
+
+  .input-with-icon {
+    display: flex;
+    align-items: center;
+    width: 90%; /* Adjust width as needed */
   
-  .loginbtn {
-    margin-top: 20px;
-  }
-  
-  .validationError {
-    color: red;
-    font-size: 14px;
-  }
-  
+/*   
+  .sample-pwd-field-class{
+    padding: 10px;
+    margin-top: 25px;
+  } */
