--- a/src/pages/login/login.css
+++ b/src/pages/login/login.css
@@ -1,4 +1,4 @@
-/* login.css */
+/* 
 .login-content {
   --background: transparent;
   display: flex;
@@ -57,4 +57,4 @@
  align-items: center;
  text-align: center;
 }
-
+ */
