--- a/src/components/layouts/layout.css
+++ b/src/components/layouts/layout.css
@@ -18,7 +18,7 @@
     white-space: nowrap;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
     font-size: 10px;
-    display: none; /* Hide by default */
+    display: none;
   }
   
   .fab-button:hover::after {
@@ -33,9 +33,6 @@
     }
   }
   
-
-
-/* FabMenu.css */
 
 
 
