--- a/src/components/style.css
+++ b/src/components/style.css
@@ -1,3 +1,9 @@
+/* *{
+  scroll-behavior: none;
+  overflow: auto;
+} */
+
+
 .profilHeader {
     width: 40px; 
     height: 40px; 
@@ -267,42 +273,56 @@ display: none;
   justify-content: center;
   align-items: center;
   height: 100%;
-  background-image: url('https://legalxgen.blob.core.windows.net/customerlogos/lxdoca2e78860a63e442592246686d2c84789.jpeg');
   background-size: cover;
   background-position: center;
+  background-image: linear-gradient(41deg, rgba(107, 107, 107, 0.04) 0%, rgba(107, 107, 107, 0.04) 8%,rgba(31, 31, 31, 0.04) 8%, rgba(31, 31, 31, 0.04) 100%),linear-gradient(9deg, rgba(228, 228, 228, 0.04) 0%, rgba(228, 228, 228, 0.04) 62%,rgba(54, 54, 54, 0.04) 62%, rgba(54, 54, 54, 0.04) 100%),linear-gradient(124deg, rgba(18, 18, 18, 0.04) 0%, rgba(18, 18, 18, 0.04) 37%,rgba(233, 233, 233, 0.04) 37%, rgba(233, 233, 233, 0.04) 100%),linear-gradient(253deg, rgba(201, 201, 201, 0.04) 0%, rgba(201, 201, 201, 0.04) 55%,rgba(47, 47, 47, 0.04) 55%, rgba(47, 47, 47, 0.04) 100%),linear-gradient(270deg, rgba(172, 172, 172, 0.04) 0%, rgba(172, 172, 172, 0.04) 33%,rgba(26, 26, 26, 0.04) 33%, rgba(26, 26, 26, 0.04) 100%),linear-gradient(64deg, rgba(11, 11, 11, 0.04) 0%, rgba(11, 11, 11, 0.04) 38%,rgba(87, 87, 87, 0.04) 38%, rgba(87, 87, 87, 0.04) 100%),linear-gradient(347deg, rgba(199, 199, 199, 0.04) 0%, rgba(199, 199, 199, 0.04) 69%,rgba(4, 4, 4, 0.04) 69%, rgba(4, 4, 4, 0.04) 100%),linear-gradient(313deg, rgba(36, 36, 36, 0.04) 0%, rgba(36, 36, 36, 0.04) 20%,rgba(91, 91, 91, 0.04) 20%, rgba(91, 91, 91, 0.04) 100%),linear-gradient(90deg, rgb(39, 55, 180),rgb(35, 148, 228));
+ 
 }
 
-.login-background {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 100%;
-  height: 100%;
+.card-content{
+  padding-top: 30%;
 }
+
 
 .login-card {
-  width: 100%;
-  max-width: 500px;
-  background: rgba(254, 255, 255, 0.90);
-  border-radius: 10px;
+  
+  margin-top: 50px;
+  background:none;
+  border-radius: 50px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
   padding: 20px;
+  height: 80%;
+
 }
 
 .login-logo-container {
   display: flex;
   justify-content: center;
   margin-bottom: 20px;
+  
+  
+
 }
 
 .login-logo {
-  width: 150px;
+  width: 180px;
 }
 
 .texts {
-  margin-bottom: 10px;
+  margin-bottom: 20px;
+  border-radius: 10px;
+  border: 1px solid #fff;
+  background: rgba(76, 175, 80, 0.3)
+  
 }
 
+.lablesLogin{
+display: block;
+font-size: 14px;
+color:white;
+margin: 5px;
+
+}
 .transparent-bg-btn {
   background: transparent;
   box-shadow: none;
@@ -314,12 +334,17 @@ display: none;
 
 .login-links {
   display: flex;
-
  justify-content: center;
  align-items: center;
  text-align: center;
+ margin-top: 50px;
+ 
 }
-
+.remMe{
+  display: flex;
+  margin-bottom: 20px;
+ 
+}
 .centered-button-container {
   display: flex;
   justify-content: center;
@@ -328,7 +353,6 @@ display: none;
   margin-bottom: 20px;
 
 }
-
 
 
 .photos-container {
@@ -473,6 +497,7 @@ display: none;
   background: linear-gradient(180deg, #FFFFFF, #D7E2FF )!important;
   border-bottom: 1px solid #88A6F3;
  font-size: small;
+ color: black;
 
 }
 .font-bold{
@@ -545,12 +570,12 @@ display: none;
   bottom: 5px;
   box-sizing: border-box;
   position:fixed;
-  z-index: 99999;
+  z-index: 9999999;
   background:#ffe4e1;
   padding: 10px 0px;
   border-radius: 10px;
-margin-left: 4px;
-border:0.9px solid #ffddca;
+  margin-left: 4px;
+  border:0.9px solid #ffddca;
 }
 .validationIcon{
   font-size: 20px;
@@ -565,16 +590,6 @@ border:0.9px solid #ffddca;
   background-size: 100%;
   height: 80px;
 }
-.page-content {
-  transition: filter 0.3s ease-in-out; 
-}
 
-.blur-background {
-  filter: blur(2px);
-}
-
-.ion-fab {
-  z-index: 1000; 
-}
 
 
