--- a/src/theme/variables.css
+++ b/src/theme/variables.css
@@ -82,8 +82,8 @@ http://ionicframework.com/docs/theming/ */
    * -------------------------------------------
    */
 
-  body {
-    --ion-color-primary: #428cff;
+  /* body {
+    --ion-color-primary: #6196ec;
     --ion-color-primary-rgb: 66,140,255;
     --ion-color-primary-contrast: #ffffff;
     --ion-color-primary-contrast-rgb: 255,255,255;
@@ -145,14 +145,14 @@ http://ionicframework.com/docs/theming/ */
     --ion-color-light-contrast-rgb: 255,255,255;
     --ion-color-light-shade: #1e2023;
     --ion-color-light-tint: #383a3e;
-  }
+  } */
 
   /*
    * iOS Dark Theme
    * -------------------------------------------
    */
 
-  .ios body {
+  /* .ios body {
     --ion-background-color: #000000;
     --ion-background-color-rgb: 0,0,0;
 
@@ -182,13 +182,13 @@ http://ionicframework.com/docs/theming/ */
     --ion-item-background: #000000;
 
     --ion-card-background: #1c1c1d;
-  }
+  } */
 
-  .ios ion-modal {
+  /* .ios ion-modal {
     --ion-background-color: var(--ion-color-step-100);
     --ion-toolbar-background: var(--ion-color-step-150);
     --ion-toolbar-border-color: var(--ion-color-step-250);
-  }
+  } */
 
 
   /*
@@ -196,8 +196,8 @@ http://ionicframework.com/docs/theming/ */
    * -------------------------------------------
    */
 
-  .md body {
-    --ion-background-color: #121212;
+  /* .md body {
+    --ion-background-color: #4e4e4e;
     --ion-background-color-rgb: 18,18,18;
 
     --ion-text-color: #ffffff;
@@ -227,12 +227,12 @@ http://ionicframework.com/docs/theming/ */
 
     --ion-item-background: #1e1e1e;
 
-    --ion-toolbar-background: #1f1f1f;
+    --ion-toolbar-background: #131212;
 
-    --ion-tab-bar-background: #e9b9b9;
+    --ion-tab-bar-background: #000000;
 
     --ion-card-background: #1e1e1e;
-  }
+  } */ 
  
 
 
