--- a/src/components/style.css
+++ b/src/components/style.css
@@ -75,7 +75,7 @@
    padding: 1px;
   color:#ffffff;}
 
-.billable-hours, .exp-reimbursed{color: green; font-size: x-small; font-weight: 600;}
+.billable-hours, .exp-reimbursed{color: green; font-size: small; font-weight: 600;}
 .nonbillable-hours, 
 .exp-balance
 {color: 
@@ -84,7 +84,9 @@
   font-weight: 600;
 
 }
-
+.card-labels{
+  font-size: small;
+}
 .greeting-text {
   font-size: 1.2rem;
   font-weight: 500;
@@ -102,7 +104,7 @@
   flex-direction: column;
   justify-content: space-between;
   border:  1px solid #e4e4e4 ;
-  border-radius: 10px;
+  border-radius: 15px;
  
 }
 
@@ -114,6 +116,10 @@
   padding:8px 5px;
   font-weight: bold;
    padding-left: 15px;
+   white-space: nowrap; 
+  overflow: hidden;       
+  text-overflow: ellipsis;
+   
 
 }
 
@@ -270,18 +276,27 @@
 }
 
 .card-content{
-  padding-top: 30%;
+display: flex;
+flex-direction: column;
+justify-content: center;
+align-content: center;
+width: fit-content;
+  
 }
 
 
 .login-card {
   
-  margin-top: 50px;
+  margin-top: 40px;
   background:none;
   border-radius: 50px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
   padding: 20px;
-  height: 80%;
+   display:  flex;
+  justify-content: space-between;
+  min-height: 650PX;
+
+
 
 }
 
@@ -290,19 +305,19 @@
   justify-content: center;
   margin-bottom: 20px;
   
-  
 
 }
 
 .login-logo {
-  width: 180px;
+  width: 230px;
 }
 
 .texts {
   margin-bottom: 20px;
-  border-radius: 10px;
-  border: 1px solid #fff;
-  background: rgba(76, 175, 80, 0.3)
+  border-radius: 20px;
+color: rgb(58, 57, 57);
+background: #fff!important;  border-bottom-left-radius: 2px solid blue;
+
   
 }
 
@@ -310,7 +325,7 @@
 display: block;
 font-size: 14px;
 color:white;
-margin: 5px;
+margin: 8px;
 
 }
 .transparent-bg-btn {
@@ -427,7 +442,7 @@ margin: 5px;
     font-size: small !important;
 }
 .btninlinemarg{margin-inline-start: 0px;}
-.total-time{ font-size: small; text-align: right;}
+.total-time{ font-size: small; text-align: right; color: #3880ff; font-weight: bold;}
 .Billable-nonbillable-hrs{font-size: x-small; color: gray; text-align: right;}
 .Billable-nonbillable-hrs span:first-child{color: green;  padding:0px 5px 0px 0px;}
 .Billable-nonbillable-hrs span:last-child{color:red; padding:0px 0px 0px 5px;}
@@ -585,12 +600,14 @@ margin: 5px;
 .button-group ion-button {
   flex: 1;
   margin: 0 4px; 
+  border-radius: 20px;
 }
 
 .button-group {
   display: flex;
   justify-content: space-between;
   margin-top: 30px;
+  font-weight: bolder;
 }
 
 .comments{ 
@@ -622,6 +639,7 @@ margin: 5px;
 .customMenuBtn{
   font-size:smaller !important;
 }
+
 
 
 
