--- a/src/components/timesheet/calendarNavigation.css
+++ b/src/components/timesheet/calendarNavigation.css
@@ -23,7 +23,7 @@ ion-segment-button {
   .md ion-segment-button{
     height: 35px !important; 
     min-height: 30px !important;
-    border-radius: 10px;
+    border-radius: 15px;
     --padding-top: 0px;
     --padding-bottom: 0px; 
  
@@ -31,6 +31,9 @@ ion-segment-button {
     
   }
 
+
+ 
+  
  .md .segment-button-checked{ 
     background-color: rgb(252, 252, 255);
     border-bottom: none;
@@ -43,7 +46,7 @@ ion-segment-button {
 }
 
 :host(.md) .segment-button-checked.segment-button-indicator-background {
-    display: none !important; /* Hide the element */
+    display: none !important; 
   }
   
 
