--- a/src/components/style.css
+++ b/src/components/style.css
@@ -676,7 +676,7 @@ margin: 8px;
   background:aliceblue; 
   border:1px solid #88A6F3; 
   margin:10px  5%; 
-  border-radius: 10px; 
+  border-radius: 40px; 
   box-shadow:  0 10px 6px -6px #777;
   padding: 10px;
 
@@ -686,9 +686,16 @@ margin: 8px;
   display: flex;
   justify-content: center;
   line-height: 25px;
-  margin-left: 60px;
+  margin-left: 5px;
+
 }
-.chart-data span.total-time{ padding-left: 100px!important;}
+.chart-data span.total{ 
+  padding-left: 100px!important;
+  overflow: hidden;  
+  white-space: nowrap;   
+  text-overflow: ellipsis; 
+  font-weight: bolder;
+}
 @media (max-width: 400px) {
  
   .dashboard-card {
@@ -721,4 +728,23 @@ margin: 8px;
   justify-content: start;
   align-content: center;
   padding: 2.5PX;
+}
+
+.matter-search-bar{
+ border-radius: 20px;
+  color: gray;
+}
+
+.searchbar-input.sc-ion-searchbar-md {
+  -webkit-padding-start: 3.4375rem;
+  padding-inline-start: 3.4375rem;
+  -webkit-padding-end: 3.4375rem;
+  padding-inline-end: 3.4375rem;
+  padding-top: 0.375rem;
+  padding-bottom: 0.375rem;
+  height: auto;
+  font-size: 1rem;
+  font-weight: 400;
+  line-height: 30px;
+  border-radius: 10px;
 }
