--- a/src/components/style.css
+++ b/src/components/style.css
@@ -676,8 +676,7 @@ margin: 8px;
   background:aliceblue; 
   border:1px solid #88A6F3; 
   margin:10px  5%; 
-  border-radius: 40px; 
-  box-shadow:  0 10px 6px -6px #777;
+  border-radius: 20px; 
   padding: 10px;
 
 }
@@ -758,3 +757,6 @@ margin: 8px;
   color: orange;
 }
 
+.actionBtn{
+  height: 38px;
+}
