--- a/src/components/timesheet/calendarNavigation.css
+++ b/src/components/timesheet/calendarNavigation.css
@@ -20,10 +20,10 @@ ion-segment-button {
    
   }
   
-  .md ion-segment-button{
+   ion-segment-button{
     height: 35px !important; 
     min-height: 30px !important;
-    border-radius: 15px;
+     border-radius: 8px;
     --padding-top: 0px;
     --padding-bottom: 0px; 
  
@@ -37,6 +37,7 @@ ion-segment-button {
  .md .segment-button-checked{ 
     background-color: rgb(252, 252, 255);
     border-bottom: none;
+    background: #fff!important;  border-bottom: 2px solid blue; 
     
     }
  .ios .segment-button-checked{background: #fff!important;  border-bottom: 2px solid blue; }
@@ -45,9 +46,7 @@ ion-segment-button {
     color:#0163aa;
 }
 
-:host(.md) .segment-button-checked.segment-button-indicator-background {
-    display: none !important; 
-  }
+
   
 
 
